Fix padding on bio section on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,9 @@ a {
   #bio {
     max-width: 600px;
     text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
   }
 
   #hedcut {
